# Bld.ai-Tasks

./: README.md  conftest.py  pyproject.toml  pytest.ini
albums/: admin.py  filters.py  forms.py  models.py  serializers.py  tasks.py  urls.py  views.py
albums/migrations/: 0001_initial.py  0002_album_approved.py  0003_alter_album_creation_date.py  0004_remove_album_creation_date_album_status_and_more.py  0005_remove_album_status_remove_album_status_changed_and_more.py  0006_song_album_song.py  0007_alter_album_author.py
albums/tests/: test_endpoints.py  test_serializers.py
artist/: admin.py  models.py  serializers.py  urls.py  views.py
artist/migrations/: 0001_initial.py  0002_artist_linked_user.py
authentication/: serializers.py  urls.py  views.py
authentication/tests/: test_views.py
musicplatform/: RESULT.md  celery.py  settings.py  urls.py
users/: models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_bio.py
